--- a/NotasMedicas/NotasMedicas/static/css/estilos.css
+++ b/NotasMedicas/NotasMedicas/static/css/estilos.css
@@ -1,55 +1,53 @@
+@font-face {
+    font-family: titulo;
+    src: url(../fonts/sansation_light.woff);
+}
+
+
 body
 {
 	margin: 0 1em 0 1em;
-
-}
-
-h2
-{
-	text-align: center;
-	margin:auto;
-	padding: 0.2em 0 0.2em 0;
-}
-
-form
-{
-	
 }
 
 /*Login*/
 #loginform
-{	
-	margin: auto;
-	border-style: groove;
-	border-radius: 5px;
-	padding: 3em 2em 2em 0em;
+{ 
+  margin: auto;
+  border-style: groove;
+  border-radius: 5px;
+  padding: 3em 2em 2em 0em;
 }
 
 #loginform input, img, label
 {
-	max-width: 100%;
-	display: inline-block;
-	margin: 0.5em 1em 0.5em 1em;
+  max-width: 100%;
+  display: inline-block;
+  margin: 0.5em 1em 0.5em 1em;
 }
 
 #logo
 {
-	max-width: 50%;
-	min-width: 20%;
-	height: auto;
-	margin: auto;
+  max-width: 50%;
+  min-width: 20%;
+  height: auto;
+  margin: auto;
 }
 
 /*Termina login*/
 
-.busqueda
-{
-	margin: 1em 0 1em 0;
-}
-
-.row 
+.box-shade
 {
 	text-align: center;
+	margin: 0.5em 0.5em 0.5em 0.5em;
+	padding: 0.2em 0 0.2em 0;
+  box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #eee;
+  border-radius: 0.3em;
+}
+
+
+.busqueda
+{
+	margin: 2em 1em 1em 1em;
 }
 
 .row img 
@@ -72,14 +70,17 @@ form
 	border-width: 1px;
 }
 
-.panel-body
+.popover-title
 {
-
+    color: #000000;
+}
+.popover-content
+{
+    color: #000000;
 }
 
 .camas
 {
-
 	margin:  0.5rem 0.5rem 0.5rem 0.5rem;
 	padding: 0.5rem 0.5rem 0.5rem 0.5rem;
 }
@@ -125,7 +126,8 @@ form
 /* Toggle Styles */
 
 #wrapper {
-    padding-left: 0;
+    padding-left: 1em;
+    margin-left: 1em;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -173,7 +175,7 @@ form
     position: absolute;
     top: 0;
     width: 300px;
-    margin: 0;
+    margin: 0 0 0 1em;
     padding: 0;
     list-style: none;
 }
@@ -321,61 +323,16 @@ h1 {
     white-space: nowrap;
     text-align: center;
 }
-h1:before,
-h1:after {
-  content: "";
-  position: relative;
-  display: inline-block;
-  width: 50%;
-  height: 1px;
-  vertical-align: middle;
-  background: #f0f0f0;
-}
-h1:before {    
-  left: -.5em;
-  margin: 0 0 0 -50%;
-}
-h1:after {    
-  left: .5em;
-  margin: 0 -50% 0 0;
-}
-h1 > span {
-  display: inline-block;
-  vertical-align: middle;
-  white-space: normal;
-}
+
 
 p {
   display: block;
-  font-size: 1.35em;
+  font-size: 1.1em;
   line-height: 1.5em;
   margin-bottom: 22px;
 }
 
-a { color: #5a9352; text-decoration: none; }
-a:hover { text-decoration: underline; }
 
-.center { display: block; text-align: center; }
-
-
-/** page structure **/
-#w {
-  display: block;
-  width: 750px;
-  margin: 0 auto;
-  padding-top: 30px;
-}
-
-#content {
-  display: block;
-  width: 100%;
-  background: #fff;
-  padding: 25px 20px;
-  padding-bottom: 35px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
-  -moz-box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
-}
 
 #searchfield { display: block; width: 100%; text-align: center; margin-bottom: 35px; }
 
@@ -404,45 +361,6 @@ a:hover { text-decoration: underline; }
 }
 #searchfield form .biginput:focus {
   color: #858585;
-}
-
-
-
-.flatbtn {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  display: inline-block;
-  outline: 0;
-  border: 0;
-  color: #f3faef;
-  text-decoration: none;
-  background-color: #6bb642;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  font-size: 1.2em;
-  font-weight: bold;
-  padding: 12px 22px 12px 22px;
-  line-height: normal;
-  text-align: center;
-  vertical-align: middle;
-  cursor: pointer;
-  text-transform: uppercase;
-  text-shadow: 0 1px 0 rgba(0,0,0,0.3);
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 1px 0 rgba(15, 15, 15, 0.3);
-  -moz-box-shadow: 0 1px 0 rgba(15, 15, 15, 0.3);
-  box-shadow: 0 1px 0 rgba(15, 15, 15, 0.3);
-}
-.flatbtn:hover {
-  color: #fff;
-  background-color: #73c437;
-}
-.flatbtn:active {
-  -webkit-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow:inset 0 1px 5px rgba(0, 0, 0, 0.1);
-  box-shadow:inset 0 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 
