--- a/NotasMedicas/NotasMedicas/templates/formatos.html
+++ b/NotasMedicas/NotasMedicas/templates/formatos.html
@@ -10,7 +10,7 @@
 </script>
 
 <div class="row">
-	<h3 class="bg-info">
+	<h3 class="bg-primary box-shade">
 		{% if ingreso %}
 			{% for item in ingreso %}
 				<a href="#"  class="btn btn-info btn-sm" data-toggle="popover" title="NSS" data-placement="bottom" data-content="{{item.nss}}">
